--- a/pytrix/pytrix_slicing.ipynb
+++ b/pytrix/pytrix_slicing.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1-D Indexing"
+    "## Slicing List Data Types"
    ]
   },
   {
@@ -24,69 +24,74 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[ 1  2  3  4  5  6  7  8  9 10]\n"
+     "text": "[1, 2, 3, 4, 5]\n"
     }
    ],
    "source": [
-    "numbers= [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "# creating a 1-D array\n",
-    "a= np.array(numbers)\n",
+    "# Creating a list \n",
+    "a = [1, 2, 3, 4, 5]\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Index 0: 1\nIndex 5: 6\nIndex 7: 8\n"
+     "text": "[2, 3, 4]\n"
     }
    ],
    "source": [
-    "print(f\"Index 0: {a[0]}\\nIndex 5: {a[5]}\\nIndex 7: {a[7]}\")"
+    "# Slicing a list\n",
+    "b = a[1:4]\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "List c: [1, 2, 3]\nList d: [3, 4, 5]\nList e: [1, 2, 3, 4, 5]\n"
+    }
+   ],
+   "source": [
+    "# Demonstrating slice notation\n",
+    "c = a[:3]\n",
+    "d = a[2:]\n",
+    "e = a[:]\n",
+    "print(f\"List c: {c}\\nList d: {d}\\nList e: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "f: 3\ng: [3]\n"
+    }
+   ],
+   "source": [
+    "# indexing list vs slicing list\n",
+    "f = a[2]\n",
+    "g = a[2:3]\n",
+    "print(f\"f: {f}\\ng: {g}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-D Indexing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[[  1   2   3   4   5   6   7   8   9  10]\n [ 10  20  30  40  50  60  70  80  90 100]]\n"
-    }
-   ],
-   "source": [
-    "big_numbers= [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-    "# creating a 2-D array (list of list) \n",
-    "b= np.array([numbers, big_numbers])\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "50\n"
-    }
-   ],
-   "source": [
-    "print(b[1, 4])"
+    "## Slicing 1D Arrays"
    ]
   },
   {
@@ -97,12 +102,14 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[ 1  2  3  4  5  6  7  8  9 10]\n"
+     "text": "[2 3 4]\n"
     }
    ],
    "source": [
-    "# print the first row\n",
-    "print(b[0])"
+    "# slicing numpy array\n",
+    "np_a = np.array([1, 2, 3, 4, 5])\n",
+    "np_b = np_a[1:4]\n",
+    "print(np_b)"
    ]
   },
   {
@@ -113,19 +120,21 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[ 9 90]\n"
+     "text": "Original Array: [1 2 3 4 5]\nnp_b: [2 6 4]\nOriginal Array: [1 2 6 4 5]\n"
     }
    ],
    "source": [
-    "# full slice, column 8\n",
-    "print(b[:, 8])"
+    "# numpy returns a view of the original data\n",
+    "print(f\"Original Array: {np_a}\")\n",
+    "np_b[1] = 6\n",
+    "print(f\"np_b: {np_b}\\nOriginal Array: {np_a}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3-D Indexing"
+    "## Slicing 2D Arrays"
    ]
   },
   {
@@ -136,80 +145,42 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[[[ 1  2  3]\n  [ 4  5  6]\n  [ 7  8  9]]\n\n [[10 11 12]\n  [13 14 15]\n  [16 17 18]]\n\n [[19 20 21]\n  [22 23 24]\n  [25 26 27]]]\n"
+     "text": "[[ 7  8]\n [12 13]\n [17 18]]\n"
     }
    ],
    "source": [
-    "# instantiating a 3-d array \n",
-    "c= np.array([[[1, 2, 3], [4, 5, 6], [7, 8, 9]],\n",
-    "             [[10, 11, 12], [13, 14, 15], [16, 17, 18]],\n",
-    "             [[19, 20, 21], [22, 23, 24], [25, 26, 27]]])\n",
-    "\n",
-    "print(c)"
+    "# creating and slicing 2D array in both axes\n",
+    "a_2d = np.array([[1, 2, 3, 4, 5],\n",
+    "                 [6, 7, 8, 9, 10],\n",
+    "                 [11, 12, 13, 14, 15],\n",
+    "                 [16, 17, 18, 19, 20]])\n",
+    "print(a_2d[1:, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing 3D Arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[[1 2 3]\n [4 5 6]\n [7 8 9]]\n"
+     "text": "[[[13 14 15]\n  [16 17 18]]\n\n [[22 23 24]\n  [25 26 27]]]\n"
     }
    ],
    "source": [
-    "# selecting a row\n",
-    "print(c[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "23\n"
-    }
-   ],
-   "source": [
-    "# accessing single elements\n",
-    "print(c[2, 1, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[1 2 3]\n"
-    }
-   ],
-   "source": [
-    "# accessing matrix at index 0 and row 0 from that matrix\n",
-    "print(c[0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[12 15 18]\n"
-    }
-   ],
-   "source": [
-    "# selecting a column from a 3d matrix\n",
-    "print(c[1, :, 2])"
+    "# creating and slicing 3D array 3 axes (Plane, Row, Column)\n",
+    "a_3d = np.array([[[1, 2, 3,], [4, 5, 6], [7, 8, 9]],\n",
+    "                 [[10, 11, 12], [13, 14, 15], [16, 17, 18]],\n",
+    "                 [[19, 20, 21], [22, 23, 24], [25, 26, 27]]])\n",
+    "print(a_3d[1:, 1:, :])"
    ]
   },
   {
@@ -220,12 +191,53 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[ 7 16 25]\n"
+     "text": "2D Array [[ True  True  True  True  True]\n [ True  True  True  True  True]]\n[[[ True  True  True]\n  [ True  True  True]]\n\n [[ True  True  True]\n  [ True  True  True]]]\n[[[ True  True  True]\n  [ True  True  True]\n  [ True  True  True]]]\n"
     }
    ],
    "source": [
-    "# selecting the same row and column for each matrix\n",
-    "print(c[:, 2, 0])"
+    "# 2D Arrays\n",
+    "print(a_2d[1:3, :] ==  a_2d[1:3])\n",
+    "\n",
+    "# 3D Arrays\n",
+    "print(a_3d[1:, :2, :] == a_3d[1:, :2])\n",
+    "print(a_3d[2:, :, :] == a_3d[2:, :])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing and Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[8 9]\n"
+    }
+   ],
+   "source": [
+    "print(a_2d[1, 2:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[8 9]]\n"
+    }
+   ],
+   "source": [
+    "print(a_2d[1:2, 2:4])"
    ]
   }
  ],
